syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.nucleus;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.nucleus.testsupport.input";

message ExampleDimensionInput {
    string levelName = 1;
}
