syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.groups.support.input";

import "plugins/partitions/support.proto";
import "plugins/properties/support.proto";
import "google/protobuf/any.proto";


message GroupIdInput {
    int32 id = 1;
}

message SimpleGroupTypeIdInput {
    string value = 1;
}

message GroupTypeIdInput {
    google.protobuf.Any id = 1;
}

message GroupPropertyIdInput {
    google.protobuf.Any id = 1;
}

message PersonToGroupMembershipInput {
    int32 pId = 1;
    repeated int32 gIds = 2;
}

message GroupToPersonMembershipInput {
    int32 gId = 1;
    repeated int32 pIds = 2;
}

message GroupPropertyDefinitionMapInput {
    GroupTypeIdInput groupTypeId = 1;
    repeated PropertyDefinitionMapInput propertyDefinitions = 2;
}

message GroupPropertyValueMapInput {
    int32 gId = 1;
    repeated PropertyValueMapInput propertyValueMap = 2;
}

message GroupInput {
    int32 gId = 1;
    GroupTypeIdInput groupTypeId = 2;
}

message GroupPropertyDimensionInput {
    int32 gId = 1;
    GroupPropertyIdInput groupPropertyId = 2;
    repeated google.protobuf.Any values = 3;
}

message GroupMemberFilterInput {
    int32 gId = 1;
}

message GroupTypesForPersonFilterInput {
    EqualityInput equality = 1;
    int32 groupTypeCount = 2;
}

message GroupsForPersonAndGroupTypeFilterInput {
    GroupTypeIdInput groupTypeId = 1;
    EqualityInput equality = 2;
    int32 groupCount = 3;
}

message GroupsForPersonFilterInput {
    EqualityInput equality = 1;
    int32 groupCount = 2;
}
